Updated package.json for new commands, update Procfile, added @babel/cli package

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon  --exec babel-node ./src/server.js",
-    "build": "webpack --mode production",
+    "clean": "rm -fr build/*",
+    "build-server": "babel -d ./build ./src/server.js -s",
+    "build": "npm run clean && npm run build-server",
     "dev": "webpack --mode development"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
