Updated dist, added dotenv for environment variable configuration, slight updates to frontend, added new models for mongoose

--- a/package.json
+++ b/package.json
@@ -3,32 +3,39 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon  --exec babel-node ./src/server.js",
-    "clean": "rm -fr build/*",
+    "start": "nodemon --exec babel-node src/server.js",
+    "clean": "rm -fr build/* dist/*",
     "build-server": "babel ./src --out-dir ./build -s",
-    "build": "npm run clean && npm run build-server && cp src/views/ build/. -r",
-    "dev": "webpack --mode development"
+    "build-client": "webpack --mode development",
+    "build": "npm run clean && npm run build-client && npm run build-server && cp src/views/ build/. -r"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.22",
     "morgan": "~1.9.1",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.13.5"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.5",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.3",
-    "@babel/node": "^7.10.3",
+    "@babel/node": "^7.10.4",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.4",
     "sass": "^1.26.9",
