--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run clean && npm run build-client && npm run build-server && cp src/views/ build/. -r"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
     "debug": "~2.6.9",
@@ -19,11 +20,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
     "morgan": "~1.9.1",
-    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
     "validator": "^13.1.1"
