--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run build && node ./build/server.js",
     "build": "babel -d ./dist/server ./src/server -s && cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "client": "cross-env NODE_ENV=development webpack-dev-server --open --config config/webpack.dev.js",
+    "client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
     "server": "nodemon --exec babel-node src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
