--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build && node ./build/server.js",
+    "start": "node scripts/server-wrapper.js",
     "build": "npm run build-server && npm run build-client && cp -r src/server/views dist/server",
-    "build-client": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "build-server": "babel ./src/server -d ./dist/server -s && babel ./src/common -d ./dist/common -s",
-    "client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
-    "server": "nodemon --exec babel-node src/server/index.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.client.prod.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.server.prod.js",
+    "client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.client.dev.js",
+    "server": "nodemon --exec \"npm run build:server && babel-node\" scripts/server-wrapper.js",
+    "server:dev": "nodemon --exec \"babel-node\" src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
@@ -72,6 +73,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.0.9",
+    "webpack-node-externals": "^2.5.1"
   }
 }
