--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node scripts/server-wrapper.js",
-    "build": "npm run build-server && npm run build-client && cp -r src/server/views dist/server",
+    "build": "npm run build:server && npm run build:client && cp -r src/server/views dist/server",
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.client.prod.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.server.prod.js",
     "client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.client.dev.js",
