--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
